added support for getting sample names

--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.fragland</groupId>
-  <artifactId>MineStat</artifactId>
-  <version>3.0.6</version>
+  <groupId>id.derfiedev</groupId>
+  <artifactId>minestat-derfie</artifactId>
+  <version>3.0.6-custom</version>
   <packaging>jar</packaging>
 
   <name>MineStat</name>
